# YetAnotherRayTracer

./: .gitignore  CMakeLists.txt  common.h  engine.cpp  main.cpp  scene.cpp  screen.cpp
include/: CMakeLists.txt
include/maxwell/: common.h  engine.h  material.h  ray.h  scene.h  screen.h  sdl_screen.h  text_screen.h
include/maxwell/primitives/: ball.h  illuminative.h  parallelogram.h  plane.h  primitive.h
primitives/: ball.cpp  illuminative.cpp  parallelogram.cpp  parallelogram.h  plane.cpp  plane.h
scenes/: scene1.xml  scene2.xml  scene3.xml  scene4.xml  test1.xml  test2.xml
src/: CMakeLists.txt  common.cpp  engine.cpp  main.cpp  scene.cpp  screen.cpp  sdl_screen.cc  text_screen.cpp
src/primitives/: ball.cpp  illuminative.cpp  parallelogram.cpp  plane.cpp  primitive.cpp
test/: commonTest.h  intersectionTest.h
tests/: CMakeLists.txt  commonTest.cc  intersectionTest.cc  rayTest.cc  t_ray.cc  t_scene.cc  tiXmlTest.cc
tinyxml/: CMakeLists.txt  tinystr.h  tinyxml.cpp  tinyxml.h  tinyxmlparser.cpp
